[project]
name = "replay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "spotify2tidal>=1.1",
    "spotipy>=2.25.2",
    "stqdm>=0.0.5",
    "streamlit>=1.51.0",
    "tidalapi>=0.8.8",
    "tqdm>=4.67.1",
]
